syntax = "proto2";

package fastproto.test_protos;

message TestMessageOne {
    required int32 id = 1;
    optional int64 field_64 = 2;
}

message TestMessageTwo {
    optional int64 field_64 = 2;
    optional double double_field = 3;
    optional string str_field = 4;
    optional bytes byte_field = 5;
}

message TestMessageThree {
    required bool flag = 1;
}

message TestMessageFour {
    repeated int32 numbers = 1;
}
